# SimoneAI

./: .gitignore  CHANGELOG-contenuti.md  CHANGELOG-framework.md  CHANGELOG.md  CLAUDE.md  IDEAS.md  System.md
.claude/: settings.json
.obsidian/: app.json  graph.json  workspace.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.tags/: index.md
LAIF-repo-analysis/: INDEX.md  _analysis-template.md  laif-template-baseline.md
core/: README.md
docs/: setup.md  skills.md  struttura.md  workflow.md
issues/: 027-fill-token-classi-tailwind.md  037-notifica-teams-nuovo-tag.md  042-async-confirmer.md  050-warning-pipeline-deploy-dns.md  051-n8n-workflow.md  052-mcp-produttivita.md  053-end-of-life-amazon-linux-2.md  054-httponly-cookie-jwt.md  056-dashboard-standard-template.md  065-aggiornamento-stato-ticket.md  069-servizio-antiphishing.md  070-nuova-gestione-permessi.md  071-navigazione-stile-mobile.md  072-ai-stack-laif.md  073-semplificare-upstream.md  074-modularizzazione-template.md  076-user-management-form.md  080-redux-serializzare-date.md  084-localhost-da-telefono.md  085-autenticazione-oauth2.md  086-tipizzare-search-crud-service.md  088-chat-refactor-ui.md  089-appdialog-mobile-drawer.md  (+40 more)
mcp-servers/wolico/: .env  .env.example  Dockerfile  README.md  api.py  helpers.py  pyproject.toml  server.py
mcp-servers/wolico/deploy/: Dockerfile.lambda  deploy.sh  teardown.sh
mcp-servers/wolico/tools/: __init__.py  crm.py  economics.py  employees.py  monitoring.py  outages.py  presence.py  reporting.py  staffing.py  ticketing.py
(+352 files in other folders)
